# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.449 2013/04/10 14:49:06 jer Exp $

*nvidia-drivers-319.12 (10 Apr 2013)

  10 Apr 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-319.12.ebuild:
  Beta version bump.

  07 Apr 2013; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-304.84.ebuild,
  -nvidia-drivers-310.40.ebuild, -nvidia-drivers-313.26.ebuild:
  Old.

  07 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org>
  nvidia-drivers-304.88.ebuild, nvidia-drivers-310.44.ebuild,
  nvidia-drivers-313.30.ebuild:
  304.88, 310.44 and 313.30 stable for amd64 and x86, wrt bug #464248

  06 Apr 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-173.14.37.ebuild,
  nvidia-drivers-304.88.ebuild, nvidia-drivers-310.44.ebuild:
  Update maximum kernel versions.

*nvidia-drivers-173.14.37 (06 Apr 2013)

  06 Apr 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-173.14.37.ebuild:
  Version bump.

*nvidia-drivers-313.30 (03 Apr 2013)
*nvidia-drivers-310.44 (03 Apr 2013)
*nvidia-drivers-304.88 (03 Apr 2013)

  03 Apr 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-304.88.ebuild,
  +nvidia-drivers-310.44.ebuild, +nvidia-drivers-313.30.ebuild:
  Version bump (bug #464248).

  02 Apr 2013; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-304.64.ebuild,
  -nvidia-drivers-310.32.ebuild, -nvidia-drivers-313.18.ebuild:
  Old.

  31 Mar 2013; Jeff Horelick <jdhore@gentoo.org> nvidia-drivers-304.84.ebuild,
  nvidia-drivers-310.40.ebuild, nvidia-drivers-313.26.ebuild:
  marked x86 per bug 461664

  30 Mar 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-173.14.36.ebuild,
  nvidia-drivers-304.64.ebuild, nvidia-drivers-304.84.ebuild,
  nvidia-drivers-310.32.ebuild, nvidia-drivers-310.40.ebuild,
  nvidia-drivers-313.18.ebuild, nvidia-drivers-313.26.ebuild,
  nvidia-drivers-96.43.23.ebuild: