@@ -42,14 +42,14 @@ EBUILD nvidia-drivers-173.14.37.ebuild 17174 SHA256 901c43875bf2da84abd7376f6bdc
 EBUILD nvidia-drivers-304.88.ebuild 13207 SHA256 df836831cf120a10595d813029888a4d8bb5d4c218d3ffc97ffd87e07991b568 SHA512 766c12618d3dcccd155f2fa006b986a2ae8de3a7708d55dbcd5ab4cca63abc3be921efccda756a5240813a3db3cbdefa83b5c90058fe0ecdab2333ff06b3226c WHIRLPOOL be62ee858113936fe7f7becaf01929285a91d6f82c3ac9e6cbd12ee40aef06372dd7b66df2a4eb6cc54d41357ca69b5e92075b586c8f9d828c29bb6ae2fe4aab
 EBUILD nvidia-drivers-310.44.ebuild 12797 SHA256 899f51bcee5b4572eabe0bec3f9751b481d9082a7a010178ba356d9dde99ba87 SHA512 6deec003d30fb6f477234c22572b9dd3a71149dab261fa0eb5f6404084cec9382e014860c725059f5453b87b976aa231968d338eed254deef2a0e576a764d319 WHIRLPOOL 0faa98cabc6866f3a98ce9f14e927c3da7c420af944dbbdaebd1b3b6d2e7c81f95d33ac17785fb3ee75cdd497bbbf1f1238a7727e4864fc185083cdf6c5dc0d6
 EBUILD nvidia-drivers-313.30.ebuild 12741 SHA256 20151dd4ac9cdb3662c725c9042c76a359a80674e3c79f649fdd21201de45fe7 SHA512 c2a17a96ee2318f399bf3d6e4d5889a2492b1957f620e83fbae8df9b808c6475f52bd5e10c6250866c2bda5427383d086f8652325ef2add8b96016f1e9e9039d WHIRLPOOL 1e37d0295c817c34980f8000b9d17efb9d7088decad9ccb9e7755d8aaad1e5462ca7cc8ba5219eb89d5da43d47d149888f2c0023acfea36b737ea013d4a27b35
-EBUILD nvidia-drivers-319.12.ebuild 12739 SHA256 2f9e8c6872d266078ad0e44c40de8f6d05602b4d2dfaef1a351ac9c05511fa61 SHA512 a70022cb5c98314d748812072434ed42f0b84f1fc52161c7fd10f37175e0038d6362ad70886092f1d831f2f30311c7758fc9507c2f9eadedc0511950a54eae6d WHIRLPOOL 15a2b33625074f59ff8cb84ad172889f23315f4f2598e6fefbac3a78434450a692bc1eb2fe50d965a60d7773c5429e1e4664c13eae31e4788d54cb68e03bf3a7
+EBUILD nvidia-drivers-319.12.ebuild 12764 SHA256 33444c93b16d66e9d462eb4ad1be5176604c010e3b16a98cecabecd98446aa4a SHA512 4d953d75f5c7e11dace37046205d7ac50290ecbedaf5c11370142efcbb501f07e8719f9a508a8e2d78afe04380a025a8a309f1d32d688143beb4b4bb8b890543 WHIRLPOOL 3f2d5a89f58c3f0c6558c2815b257a9eeede831cee982b113c5763230bc18ef1398844c25fde64da7e11aa295e8ecab89b3a15712bd6fe5802f231de6a5204ec
 EBUILD nvidia-drivers-96.43.23.ebuild 15841 SHA256 86309432b8bd79ae20ff0e4e3cf099f0f135fb3ddf10d10148c143ae328e6199 SHA512 3c488a26c465066d79394cdd1c1391177408f420e06e41cda72ff4341a4a4053ce2935cf4a06d4399c7520e3d61900275db9710bfa8af174338ba1460e5f4459 WHIRLPOOL a8264b789a1830f8df4fda8d0de6fd02a5c2343a7d1016784e288f9dedafa7ce759bff69e7fe5ee803910850770ff7f0e5c6cd714a3b48816ec6759abfed4d8f
-MISC ChangeLog 93611 SHA256 447c055c21240c05561d78f1471ad412b5aef686571b0c128adba5e976fc5beb SHA512 2ce1aeb5daf051a80f19d579641f692e3260bd770b8c7c906430192854ba701080abd93a224006a86e9f57ae84ffd9f08c46891f3f06a40a85cbf96e795e5a68 WHIRLPOOL f8fe13c0c5afc9a0395c29e510971c94dceaa7bfbf132c0d14ef27283e29a7190d4a456ace5fabb4b1e460f82faaef202ac00680e5b313605b0ddbbe416dd0db
+MISC ChangeLog 93715 SHA256 981751dedb3c3fa2a09edc2fcee9d8d51a77e219c00bcc40e2370c62fae9106b SHA512 d477fc5409d3aeda33ee386f80786cdbdbd9e3a8f08ff1bacd8c23f0c8420ca78383cb3224f5be5c793852de3c1ad4de720eaeb66d794f120c98c75d4af5f48e WHIRLPOOL 20b4ebb324ea8bda69679947f25f4f537683408c17320bb69ba125d33fcd7b8a330ea4ce366a28a47098928b9a11c7cb7daadf3a53a206bdcb9f40f1c99951d2
 MISC metadata.xml 678 SHA256 02f45452a129ba14ad5ef0f6bf0031887aead328a7bfaa6977949bc6e8969e61 SHA512 dfc9494e01db7ee3e7ef64dc67c5e26b1a3b0c90ed2850f75c904a76a11df8b3cb137959fe471c788b7a33f555090a9c764af5cfff7f24253127484d4e518e84 WHIRLPOOL 2940677faa8b8183237d9797025079a68164584d2afd09b6e3846cdbbd5824f3c56da545b2f7d1c7d1e72746f540048e4256bde939a28ac785fa598ee2017abd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFle+MACgkQVWmRsqeSphPdngCdGollREZSKLbgCLLnSM9ed4vj
-25cAnRADpv4tbJ0LY191Yt43JsHp6gcW
-=1yZJ
+iEYEAREIAAYFAlFlfFoACgkQVWmRsqeSphPMCgCdFMVYJsHJFS8W4HsEhFWx9Lnv
+ddcAn2780rtkFw4tK7CVE5yWn/p1SwWk
+=CxFo
 -----END PGP SIGNATURE-----
