@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.449 2013/04/10 14:49:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.450 2013/04/10 14:51:04 jer Exp $
+
+  10 Apr 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-319.12.ebuild:
+  Add xz-utils to DEPEND.
 
 *nvidia-drivers-319.12 (10 Apr 2013)
 
